Fix Collapse

--- a/frontend/src/styles/components/_Carrousel.scss
+++ b/frontend/src/styles/components/_Carrousel.scss
@@ -83,6 +83,10 @@
     .housing__carrousel {
         height: 300px;
 
+        img {
+            width: auto;
+        }
+
         .carrousel-container {
             width: 85%;
         
