--- a/frontend/src/styles/components/_CollapseAbout.scss
+++ b/frontend/src/styles/components/_CollapseAbout.scss
@@ -1,12 +1,6 @@
-.accordionHousing {
-    display: flex;
-    justify-content: space-between;
-    margin: 30px 0 50px 0;
-    
-    &__container {
-        width: 49%;
-        margin-bottom: 20px;
-    }
+.accordion {
+    margin-bottom: 30px;
+    width: 100%;
 
     &__title {
         display: flex;
@@ -39,12 +33,10 @@
         overflow: hidden;
         background-color: $colour-secondary;
         padding: 10px;
-        height: 300px;
         border-radius: 5px;
         transition: all .2s ease-in;
-        margin-bottom: 20px;
 
-        span {
+        p {
             margin-top: 10px;
             color: $colour-primary;
             font-size: 18px;
@@ -53,15 +45,9 @@
 }
 
 // Responsive Mobile
-@media screen and (max-width: 768px) {
-    .accordionHousing {
-        display: flex;
-        flex-direction: column;
-
-        &__container {
-            width: 100%;
-            margin-bottom: 20px;
-        }
+@media screen and (max-width: 767px) {
+    .accordion {
+        margin-bottom: 30px;
     
         &__title {
             display: flex;
