--- a/frontend/src/styles/pages/_Housing.scss
+++ b/frontend/src/styles/pages/_Housing.scss
@@ -19,6 +19,13 @@
         display: flex;
         flex-direction: column;
     }
+
+    &__accordion {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        margin-top: 20px;
+    }
 }
 
 // Responsive Mobile
